typo in js import

--- a/src/web/templates/question_teacher.html
+++ b/src/web/templates/question_teacher.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block scripts %}
-<script src="{% static "Chart.js/dist/chart.js" %}"></script>
+<script src="{% static "Chart.js/dist/Chart.js" %}"></script>
 <script>
 function pollQuestion(classId, questionId) {
   var result = "";
